# OpenGLPractice6

./: CMakeLists.txt  README.md
src/: main.cpp
